Ticket #1332: fix unimage container overflow in ff and ie.

--- a/sites/all/themes/doit/sass/partials/02-extend/_dosomething.sass
+++ b/sites/all/themes/doit/sass/partials/02-extend/_dosomething.sass
@@ -394,16 +394,18 @@ h3.subhead
 .two-column-grid
   .views-row
     width: 49%
+    .ie8 &
+      height: 120px
+      overflow: hidden
     &:nth-of-type(odd),
     .views-row-odd
-      float: left
       clear: left
+      float: left
     &:nth-of-type(even),
     .views-row-even
       float: right
   .pane-content
     @extend .clearfix
-
 
 ////////////////////////////
 // IMAGE TEASER MODULE
@@ -423,6 +425,8 @@ h3.subhead
   @extend .border-and-shadow
   background-color: $white
   min-height: 120px
+  _height: auto !important
+  height: 120px
   padding: $s6 $s0 0 $s0
   margin-left: 120px + $s-2
   h2
