--- a/sites/all/themes/doit/sass/partials/07-layout-design/social-services/_social-plugins.sass
+++ b/sites/all/themes/doit/sass/partials/07-layout-design/social-services/_social-plugins.sass
@@ -9,9 +9,12 @@
   margin-bottom: 15px
 
 .pane-dosomething-blocks-dosomething-social-node-buttons
-  float: left
   margin-bottom: 0
+  +clearfix
   width: 50%
+  .pane-content
+    float: left
+    width: 100%
 .pane-dosomething-blocks-dosomething-facepile-general
   float: right
   margin-bottom: 0
